# simple-discord-bot

./: Cargo.toml  README.md
src/: main.rs
