[package]
name = "simple-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = { version = "0.51.0" }
shuttle-runtime = "0.51.0"
serenity = { version = "0.12.0", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = "1.26.0"
tracing = "0.1.37"
regex = "1.10.2"
